--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 
   <parent>
     <groupId>io.wcm</groupId>
-    <artifactId>io.wcm.testing.parent</artifactId>
-    <version>1.4.7-SNAPSHOT</version>
+    <artifactId>io.wcm.parent_toplevel</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -34,7 +34,7 @@
   <version>1.0.5-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>JUnit Commons</name>
+  <name>JUnit 4 Commons</name>
   <description>Common extensions of JUnit 4.</description>
   <url>${site.url}/${site.url.module.prefix}/</url>
 
@@ -108,24 +108,6 @@
       </plugin>
 
     </plugins>
-    <pluginManagement>
-      <plugins>
-      
-        <plugin>
-          <groupId>com.amashchenko.maven.plugin</groupId>
-          <artifactId>gitflow-maven-plugin</artifactId>
-          <configuration>
-            <!-- Do not prefix release numbers with artifactId - GIT contains only one released artifact -->
-            <gitFlowConfig combine.self="override">
-              <releaseBranchPrefix>release/</releaseBranchPrefix>
-              <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
-              <versionTagPrefix />
-            </gitFlowConfig>
-          </configuration>
-        </plugin>
-
-      </plugins>
-    </pluginManagement>
   </build>
 
   <distributionManagement>
